--- a/results/final/prod_ulti.Rmd
+++ b/results/final/prod_ulti.Rmd
@@ -1,9 +1,26 @@
 ---
-title: "Final Production Analysis"
-output: html_notebook
+title: "Sally The Congressperson: Final Production Analysis"
+author: "B. Papineau"
+date: "2021--2022"
+output:
+  html_notebook:
+    toc: yes
+    toc_float:
+      collapsed: no
+    number_sections: yes
+    theme: journal
+  html_document:
+    toc: yes
+    df_print: paged
 ---
 
-#Prelims
+# Introduction 
+The code and information contained herein constitutes the complete write-up of the experiments I carried out for my first Qualifying Paper towards the PhD in Linguistics at Stanford University.The data is fully anonymized, and should be usable by other researchers. If you have any questions or concerns about the code or information contained herein, please feel free to reach out to me via email at branpap[at]stanford[dot]edu.
+
+
+## Preliminaries
+
+I use the following R libraries for the analyses and visualizations contained herein. Additionally, I load the helpers.R script written by Sebastian Schuster, which provides bootstrapped confidence intervals for ggplot outputs.
 
 ```{r echo=TRUE}
 library(ggplot2) 
@@ -18,28 +35,33 @@ library(grid)
 source("helpers.R")
 ```
 
-# Data
-
-
-I also use a custom color palette, so I include the code for that here as well^[It is my hope and intention that this color palette be color-blind friendly. If you have accessibility concerns, please do not hesitate to reach out to me!].
+I also use two custom color palettes, so I include the code for those here as well^[It is my hope and intention that these color palettes be color-blind friendly. If you have accessibility concerns, please do not hesitate to reach out to me!]. Finally, all ggplots included herein use the minimal ggplot theme.
 
 ```{r}
 bran_palette = c("#7ae7e5", "#fe5f55", "#B2A6DE", "#14342b", "#69385c")
+sec_palette = c("#3d405b","#e07a5f","#81b29a","f2cc8f")
 
 theme_set(theme_minimal())
+
+dodge = position_dodge(0.9)
 ```
 
 ### Frequency Data
 
-We also need the frequency data!
+We also need the frequency data! These frequency values are taken from the Corpus of Contemporary American English^[https://www.english-corpora.org/coca/] (COCA), from only the spoken part of the corpus. 
 
 ```{r}
 frequency <- read.csv("freq_vals.csv")
 ```
 
+Here we set up objects which will specify both the liberal news sources (lib_cols) and the non-independent news sources (non_inds). These news sources' left vs. right wing skews were coded according to their positions on the Ad Fontes Media Bias Chart^[https://adfontesmedia.com].
+
 ```{r}
 lib_cols <- c('ABC','CNN','PBS','NBC','MSNBC','NPR','CBS')
+non_inds <- c('ABC','CNN','PBS','NBC','MSNBC','NPR','CBS','FOX')
 ```
+
+Here we take the raw frequency values obtained from COCA and turn them into words per million values, to account for the varying sizes of the media sources in the corpus. We also code the terms for whether or not the are gender neutral, and whether the neutral forms are compounds (e.g. congressperson) or adoptions of the male form (e.g. actor). Finally, we code them for their form gender.
 
 ```{r}
 frequency <- frequency %>%
@@ -50,88 +72,28 @@ frequency <- frequency %>%
   mutate(right_wpm = (total_right/12200000) * 1000000) %>%
   mutate(neutral_binary = ifelse(gender=="neutral",1,0)) %>%
   mutate(morph_type = ifelse(lexeme!= 'actor' & lexeme!= 'host' & lexeme !='hunter' & lexeme!= 'villain' & lexeme!= 'heir' & lexeme!= 'hero','compound','adoption')) %>% 
-  rename(form = word) 
+  rename(form = word) %>% 
+  mutate(freq_gender = ifelse(form == "actress" | form == "anchorwoman" | form == "stewardess" | form == "businesswoman" | form == 'camerawoman' | form == 'congresswoman' | form == 'craftswoman' | form == 'crewwoman' | form == 'firewoman' | form == 'forewoman'  | form == 'heiress' | form == 'heroine' | form == 'hostess' | form == 'huntress' | form == 'laywoman' | form == 'policewoman' | form == 'saleswoman' | form == 'stuntwoman' | form == 'villainess' | form == 'weatherwoman',"female",ifelse(form == "anchor" | form == "flight attendant" | form == "businessperson" | form == 'camera operator' | form == 'congressperson' | form == 'craftsperson' | form == 'crewmember' | form == 'firefighter' | form == 'foreperson' | form == 'layperson' | form == 'police officer' | form == 'salesperson' | form == 'stunt double' | form == 'meteorologist',"neutral",ifelse(form == "anchorman" | form == "steward" | form == "businessman" | form == 'cameraman' | form == 'congressman' | form == 'craftsman' | form == 'crewman' | form == 'fireman' | form == 'foreman' | form == 'layman' | form == 'policeman' | form == 'salesman' | form == 'stuntman' | form == 'weatherman',"male",'neutral'))))
 ```
 
-```{r}
-non_inds <- c('ABC','CNN','PBS','NBC','MSNBC','NPR','CBS','FOX')
-```
-
-
-```{r}
-test_freq <- read.csv("freq_vals.csv")
-
-test_freq <- test_freq %>% 
-  mutate(total = rowSums(test_freq[non_inds]))
-
-test_freq[test_freq == 0.00000000] <- 0.0001 
-
-test_freq <- test_freq %>% 
-  mutate(total_wpm = (total/121500000) * 1000000) %>% 
-  mutate(log_total = log(total_wpm))
-```
-
-
-```{r}
-frequency %>%
-  group_by(lexeme)
-```
-
-
-Re-write frequency to avoid zero numbers!
+Because we will be working in log space, we need to re-write frequency to avoid zero numbers. However, we still want them to be small to represent their non-presence in the corpus, so we give them a very small WPM value.
 
 ```{r}
 frequency[frequency == 0.00000000] <- 0.0001
 ```
 
-Take log frequency of each media type.
+We then take the log WPM of each media type, and subset out the individual media sources, which are no longer informative to the questions we are asking.
 
 ```{r}
 frequency <- frequency %>%
-  mutate(log_right = log(right_wpm), log_left = log(left_wpm), log_all = log(all_wpm)) 
+  mutate(log_right = log(right_wpm), log_left = log(left_wpm), log_all = log(all_wpm))
 ```
-
-Create media difference 
-
-```{r}
-frequency <- frequency %>% 
-  mutate(media_diff = log_left - log_right) %>%
-  mutate(nonexistent = ifelse(media_diff == 0 & log_left < -4,"true","false")) %>%
-  mutate(freq_gender = ifelse(form == "actress" | form == "anchorwoman" | form == "stewardess" | form == "businesswoman" | form == 'camerawoman' | form == 'congresswoman' | form == 'craftswoman' | form == 'crewwoman' | form == 'firewoman' | form == 'forewoman'  | form == 'heiress' | form == 'heroine' | form == 'hostess' | form == 'huntress' | form == 'laywoman' | form == 'policewoman' | form == 'saleswoman' | form == 'stuntwoman' | form == 'villainess' | form == 'weatherwoman',"female",ifelse(form == "anchor" | form == "flight attendant" | form == "businessperson" | form == 'camera operator' | form == 'congressperson' | form == 'craftsperson' | form == 'crewmember' | form == 'firefighter' | form == 'foreperson' | form == 'layperson' | form == 'police officer' | form == 'salesperson' | form == 'stunt double' | form == 'meteorologist',"neutral",ifelse(form == "anchorman" | form == "steward" | form == "businessman" | form == 'cameraman' | form == 'congressman' | form == 'craftsman' | form == 'crewman' | form == 'fireman' | form == 'foreman' | form == 'layman' | form == 'policeman' | form == 'salesman' | form == 'stuntman' | form == 'weatherman',"male",'neutral'))))
-```
-
 
 ```{r}
 frequency <- subset(frequency, select = -c(ABC,CNN,PBS,NBC,MSNBC,NPR,CBS,FOX))
 ```
 
-```{r}
-freq_log_all <- frequency %>% 
-  select(lexeme,freq_gender,log_all) %>% 
-  pivot_wider(names_from = freq_gender,values_from = log_all,names_prefix="log_all_")
-```
-
-```{r}
-freq_log_right <- frequency %>% 
-  select(lexeme,freq_gender,log_right) %>% 
-  pivot_wider(names_from = freq_gender,values_from = log_right,names_prefix="log_right_")
-```
-
-```{r}
-freq_log_left <- frequency %>% 
-  select(lexeme,freq_gender,log_left) %>% 
-  pivot_wider(names_from = freq_gender,values_from = log_left,names_prefix="log_left_")
-```
-
-```{r}
-freq_lex <- left_join(freq_log_all,freq_log_right,by="lexeme")
-```
-
-```{r}
-freq_lex <- left_join(freq_lex,freq_log_left,by="lexeme")
-```
-
-### Something
+Now we can create frequency values for the whole corpus, as well as the left vs. right wing media sources, named so that we can use them in later analyses. We do this by creating three gendered data frames, then joining them into net_lex, below. 
 
 ```{r}
 freq_all <- frequency %>% 
@@ -159,11 +121,13 @@ net_lex <- left_join(freq_all,freq_right,by="lexeme")
 net_lex <- left_join(net_lex,freq_left,by="lexeme")
 ```
 
+Now that we have the values for each of these forms, we can calculate the relative expectation of a form appearing as neutral when coreferential with a gendered name. This is because participants were presented with both gendered and gender-neutral options. 
+
 ```{r}
 net_lex <- net_lex %>%
   mutate(morph_type = ifelse(lexeme!= 'actor' & lexeme!= 'host' & lexeme !='hunter' & lexeme!= 'villain' & lexeme!= 'heir' & lexeme!= 'hero','compound','adoption')) %>% 
   mutate(
-    fem_odds = all_wpm_neutral / all_wpm_female,
+    fem_odds = log(all_wpm_neutral / all_wpm_female),
     male_odds = case_when(
       morph_type == "adoption" ~ log(all_wpm_neutral / all_wpm_neutral),
       morph_type == "compound" ~ log(all_wpm_neutral / all_wpm_male) 
@@ -171,151 +135,26 @@ net_lex <- net_lex %>%
   )
 ```
 
-### Heavy Data Analysis; DANGER ZONE
-
 ```{r}
-freq_lex <- freq_lex %>%
-  mutate(morph_type = ifelse(lexeme!= 'actor' & lexeme!= 'host' & lexeme !='hunter' & lexeme!= 'villain' & lexeme!= 'heir' & lexeme!= 'hero','compound','adoption')) %>% 
-  mutate(
-    rel_fem_odds = log_all_neutral / log_all_female,
-    rel_male_odds = case_when(
-      morph_type == "adoption" ~ log_all_neutral / log_all_neutral,
-      morph_type == "compound" ~ log_all_neutral / log_all_male
-    )
-  )
+net_lex <- net_lex %>% 
+  select(lexeme,fem_odds,male_odds)
 ```
 
+### Production Task Data Read-in
 
-
-### Norming Data
-
-And here is the norming data values:
-
-```{r ECHO=TRUE}
-norming_data <- read.csv("norming_data.csv") %>%
-  filter(id!="example1") %>% # Will filter out non-critical trials, i.e. the example trial from the beginning of the experiment
-  mutate(equalized_response = ifelse(scale=="FM",8-response,response)) %>% # This will render all data points on the same scale, as participants randomly received either "very likely a man" or "very likely a woman" as the left end of their response scale, with the other appearing at the right end
-  mutate(orthog = ifelse(orthog=="sroceress","sorceress",orthog)) %>% # Fixes a typo
-  mutate(id = ifelse(id=="Stunt_double","stunt double",id)) %>% # This, as well as all lines below it, convert compounds formed by spaces from their underscore forms to their spaced forms (e.g. police_officer -> Police officer)
-  mutate(id = ifelse(id=="Police_officer","police officer",id)) %>%
-  mutate(id = ifelse(id=="Flight_attendant","flight attendant",id)) %>%
-  mutate(id = ifelse(id=="Anchor","anchor",id)) %>%
-  mutate(id = ifelse(id=="Businessperson","businessperson",id)) %>%
-   mutate(id = ifelse(id=="Camera","camera operator",id)) %>%
-  mutate(id = ifelse(id=="Congressperson","congressperson",id)) %>%
-  mutate(id = ifelse(id=="Craftsperson","craftsperson",id)) %>%
-  mutate(id = ifelse(id=="Crewmember","crewmember",id)) %>%
-  mutate(id = ifelse(id=="Firefighter","firefighter",id)) %>%
-  mutate(id = ifelse(id=="Foreperson","foreperson",id)) %>%
-  mutate(id = ifelse(id=="Layperson","layperson",id)) %>%
-  mutate(id = ifelse(id=="Meteorologist","meteorologist",id)) %>%
-  mutate(id = ifelse(id=="Salesperson","salesperson",id)) %>%
-  mutate(id = ifelse(id=="Actor","actor",id)) %>%
-  mutate(id = ifelse(id=="Heir","heir",id)) %>%
-  mutate(id = ifelse(id=="Hero","hero",id)) %>%
-  mutate(id = ifelse(id=="Host","host",id)) %>%
-  mutate(id = ifelse(id=="Hunter","hunter",id)) %>%
-  mutate(id = ifelse(id=="Villain","villain",id)) %>%
-  mutate(orthog = ifelse(orthog=="airline steward","steward",orthog)) %>%
-  mutate(orthog = ifelse(orthog=="airline stewardess","stewardess",orthog))
-```
-
-```{r ECHO=TRUE}
-norming_exclusion <- norming_data %>% 
-  filter(gender=="female") %>% 
-  group_by(workerid) %>%
-  summarize(female_mean = mean(equalized_response)) %>%
-  unique() %>% 
-  mutate(exclusion = female_mean < mean(female_mean) - 2*sd(female_mean)) %>%
-  filter(exclusion==TRUE)
-```
-
-```{r ECHO=TRUE}
-norming_data <- norming_data[!(norming_data$workerid %in% norming_exclusion$workerid),]
-```
-
-```{r}
-norming_means <- norming_data %>%
-  filter(neutral_morh !="male_adoption") %>%
-  group_by(orthog,id) %>%
-  summarise(indi_mean = mean(equalized_response), trial_count=n()) %>%
-  rename(form = orthog) %>%
-  rename(lexeme =id)
-```
-
-```{r}
-norming_adoptions <- norming_data %>%
-  filter(neutral_morh == "male_adoption") %>%
-  group_by(orthog) %>%
-  summarise(indi_mean = mean(equalized_response), trial_count=n()) %>%
-  mutate(lexeme = ifelse(orthog=="actress","actor",ifelse(orthog=="heiress","heir",ifelse(orthog=="heroine","hero",ifelse(orthog=="hostess","host",ifelse(orthog=="huntress","hunter",ifelse(orthog=="villainess","villain",orthog))))))) %>%
-    rename(form = orthog)
-```
-
-```{r}
-norming_adoptions <- norming_adoptions[, c("lexeme", "form", "indi_mean", "trial_count")]
-```
-
-```{r}
-norming_means <- rbind(norming_means,norming_adoptions) %>%
-  rename(lexeme_norm = lexeme)
-```
-
-```{r include=FALSE}
-later_criticals <- c("actor","anchor","businessperson","camera operator","congressperson","craftsperson","crewmember","firefighter","flight attendant","foreperson","heir","hero","host","hunter","layperson","meteorologist","police officer","salesperson","stunt double","villain")
-```
-
-```{r include=FALSE}
-norming_means <- norming_means[(norming_means$lexeme_norm %in% later_criticals),]
-```
-
-**Neutrals Only**
-
-```{r}
-norming_means_neutral <- norming_data %>%
-  filter(gender=="neutral") %>%
-  filter(neutral_morh !="male_adoption") %>%
-  group_by(orthog,id) %>%
-  summarise(indi_mean = mean(equalized_response), trial_count=n()) %>%
-  rename(form = orthog) %>%
-  rename(lexeme =id)
-```
-
-```{r}
-norming_adoptions_neutral <- norming_data %>%
-  filter(gender=="neutral") %>%
-  filter(neutral_morh == "male_adoption") %>%
-  group_by(orthog) %>%
-  summarise(indi_mean = mean(equalized_response), trial_count=n()) %>%
-  mutate(lexeme = ifelse(orthog=="actress","actor",ifelse(orthog=="heiress","heir",ifelse(orthog=="heroine","hero",ifelse(orthog=="hostess","host",ifelse(orthog=="huntress","hunter",ifelse(orthog=="villainess","villain",orthog))))))) %>%
-    rename(form = orthog)
-```
-
-```{r}
-norming_adoptions_neutral <- norming_adoptions_neutral[, c("lexeme", "form", "indi_mean", "trial_count")]
-```
-
-```{r}
-norming_means_neutral <- rbind(norming_means_neutral,norming_adoptions_neutral)
-```
-
-```{r include=FALSE}
-norming_means_neutral <- norming_means_neutral[(norming_means_neutral$lexeme %in% later_criticals),]
-```
-
-
-# Analysis
-
-## Data Read-in
+Having now loaded in the frequency data we will incorporate into the final model, we can load in the data collected from the production task.
 
 ```{r}
 prod_data <- read.csv("production_data.csv")
 ```
 
-## Exclusions
+**Exclusions**
+
+Participants were excluded for failing to correctly respond to more than 80% of the attention check questions. We make a list here of all participants who failed to meet this threshold, them remove them from the dataset. This amounts to 25 participants. 
 
 ```{r}
-prod_exclusion <- prod_data %>% filter(name=='attention') %>%
+prod_exclusion <- prod_data %>% 
+  filter(name=='attention') %>%
   group_by(workerid) %>%
   summarise(accuracy = mean(correct)) %>%
   mutate(exclude = ifelse(accuracy < 0.80,'Yes','No')) %>%
@@ -326,7 +165,9 @@ prod_exclusion <- prod_data %>% filter(name=='attention') %>%
 prod_data <- prod_data[!(prod_data$workerid %in% prod_exclusion$workerid),]
 ```
 
-## Additional Information 
+**Additional Information**
+
+We also need information regarding the participants' attitudes towards social gender. To accomplish this, we calculate the mean score of their two subscores from the Social Roles Attitudes Questionnaire developed by Baber and Tucker (2006).
 
 ```{r}
 gender_transcendence_cols <- c('subject_information.gender_q1','subject_information.gender_q2','subject_information.gender_q3','subject_information.gender_q4','subject_information.gender_q5')
@@ -345,6 +186,8 @@ prod_data <- prod_data %>%
   mutate(gender_total = rowMeans(prod_data[gender_all]))
 ``` 
 
+We also need to code the responses for their gender, whether they were congruent or incongruent, and whether they were neutral or gendered responses. We also include the morphological process underlying the neutral form (same as above in the frequency data), and the political alignments of the participants. We also bin participants according to whether or not they are younger (<40) or older (>40) for visualisation purposes. Finally, we exclude the 2 participants who provided no political alignment or age. 
+
 ```{r}
 prod_data <- prod_data %>%
   filter(type == "critical") %>%
@@ -362,45 +205,22 @@ prod_data <- prod_data %>%
 ```
 
 **Joining independent data**
-Now that we have this information, we want to left join our frequency information so that we can use it in later analyses. We begin by adding the norming values' means, of all forms.
+
+Now that we have this information, we want to left join our frequency information so that we can use it in later analyses.
 
 ```{r}
-final_prod <- left_join(prod_data,norming_means,by="form")
+final_prod <- left_join(prod_data,net_lex,by="lexeme")
 ```
 
-Now we can add the frequency data as well, by form. 
+We can at this point subset out a bunch of extraneous information, keeping only what we need for further analysis.
 
 ```{r}
-final_prod <- left_join(final_prod,freq_lex,by="lexeme")
+final_prod <- subset(final_prod, select = -c(error,subject_information.asses,subject_information.enjoyment,subject_information.gender_q1,subject_information.gender_q2,subject_information.gender_q3,subject_information.gender_q4,subject_information.gender_q5,subject_information.gender_q6,subject_information.gender_q7,subject_information.gender_q8,subject_information.gender_q9,subject_information.gender_q10,subject_information.gender_q11,subject_information.gender_q12,subject_information.gender_q13))
 ```
 
-Now we can add additional lexeme-level norming information for the neutral forms, so that we can tackle the question of what role real-world expectations have on processing times. 
+**Final Data Preparation**
 
-```{r}
-final_prod <- left_join(final_prod,norming_means_neutral,by="lexeme")
-```
-
-```{r}
-final_prod <- subset(final_prod, select = -c(form.y,trial_count.y,trial_count.x,error,subject_information.comments,subject_information.asses,subject_information.enjoyment,subject_information.gender_q1,subject_information.gender_q2,subject_information.gender_q3,subject_information.gender_q4,subject_information.gender_q5,subject_information.gender_q6,subject_information.gender_q7,subject_information.gender_q8,subject_information.gender_q9,subject_information.gender_q10,subject_information.gender_q11,subject_information.gender_q12,subject_information.gender_q13,lexeme_norm)) %>%
-  rename(form_norm = indi_mean.x, lexeme_norm = indi_mean.y, form = form.x)
-```
-
-```{r}
-net_lex <- net_lex %>% 
-  select(lexeme,fem_odds,male_odds)
-```
-
-```{r}
-final_prod <- left_join(final_prod,net_lex,by="lexeme")
-```
-
-
-examination <- final_prod %>% 
-  select(lexeme,trial_gender,form,log_odds,male_odds,fem_odds,c_log_odds)
-
-
-
-### Heavy data manipulation; DANGER ZONE
+Finally, we want to code each trial with its relative log odds, given the gender of the referent in that trial. That is, when participants saw a female name, we need to use the pre-calculated neutrality expectation for female forms. When participants saw a male name, we need to use the male form values. After this, we center the gender ideology score for inclusion in analyses. 
 
 ```{r}
 final_prod <- final_prod %>%
@@ -408,83 +228,43 @@ final_prod <- final_prod %>%
     gender == "male" ~ male_odds,
     gender == "female" ~ fem_odds
   )) %>% 
-  mutate(c_gender_total = scale(gender_total,scale=FALSE)) %>%
-  mutate(c_gender_trans = scale(gender_trans,scale=FALSE)) %>%
-  mutate(c_gender_link = scale(gender_link,scale=FALSE))
-```
-
-### Before we subset out the incongruents
-
-```{r}
-prod_all <- final_prod %>%
-  mutate(poli_party = factor(poli_party,ordered = FALSE)) %>%
-  mutate(trial_gender = factor(gender,ordered = FALSE)) %>% 
-  mutate(c_trial_gender = scale(as.numeric(trial_gender),scale=FALSE)) 
-```
-
-```{r}
-final_prod <- final_prod %>%
+  mutate(c_gender_total = scale(gender_total,scale=FALSE)) %>% 
   mutate(poli_party = factor(poli_party,ordered = FALSE)) %>%
   mutate(trial_gender = factor(gender,ordered = FALSE)) %>% 
   mutate(c_trial_gender = scale(as.numeric(trial_gender),scale=FALSE)) %>% 
-  filter(incongruent == "real")
-```
-
-```{r}
-final_prod$poli_party = relevel(final_prod$poli_party, ref="Democrat")
-final_prod$trial_gender = relevel(final_prod$trial_gender, ref="male")
-```
-
-```{r}
-final_prod <- final_prod %>% 
   mutate(c_age = scale(subject_information.age, scale=FALSE)) %>% 
   mutate(c_log_odds = scale(log_odds, scale=TRUE))
 ```
 
+***Before we subset out the incongruents***
+
+Before we remove the incongruent productions, we need to save them in a separate data frame for later analysis & visualization.
+
 ```{r}
-final_prod$poli_party = relevel(final_prod$poli_party, ref="Democrat")
+prod_all <- final_prod
+```
+
+Okay, now we can filter out the incongruent responses. 
+
+```{r}
+final_prod <- final_prod %>%
+  filter(incongruent == "real")
+```
+
+**Models**
+
+Now, in order to see what comes out as statistically significant for each of the political parties, we want to run some mixed effects logistic models (logistic because our output variable is binary). We run separate logistic models for each party for reasons of interpetability. 
+
+***Democrats***
+
+We start with the democrats, so we set the reference level for trial gender as male and continue on by creating a data frame for the democrats and running their model.
+
+```{r}
 final_prod$trial_gender = relevel(final_prod$trial_gender, ref="male")
 ```
 
 ```{r}
-test_ex <- final_prod %>% 
-  filter(lexeme != "firefighter") %>% 
-  filter(lexeme != "meteorologist")
-```
-
-
-```{r}
-lom <- glmer(as.factor(response_neutral)~c_trial_gender*c_gender_total + c_log_odds + (1|workerid) + (1|lexeme),data=test_ex,family = "binomial",control = glmerControl(optCtrl = list(maxfun=2e4)))
-```
-
-
-```{r}
-tt <- getME(lom,"theta")
-ll <- getME(lom,"lower")
-min(tt[ll==0])
-```
-
-```{r}
-summary(lom)
-```
-
-
-
-```{r}
-summary(final_prod$c_log_odds)
-```
-```{r}
-table(final_prod$c_log_odds,final_prod$lexeme)
-```
-
-
-```{r}
-summary(lom)
-```
-
-
-```{r}
-dems <- test_ex %>% 
+dems <- final_prod %>% 
   filter(poli_party == "Democrat")
 ```
 
@@ -496,8 +276,12 @@ dem_model <- glmer(as.factor(response_neutral)~c_trial_gender*c_gender_total + c
 summary(dem_model)
 ```
 
+***Republicans*** 
+
+Now we do the same for the republicans. 
+
 ```{r}
-reps <- test_ex %>% 
+reps <- final_prod %>% 
   filter(poli_party == "Republican")
 ```
 
@@ -509,8 +293,12 @@ rep_model <- glmer(as.factor(response_neutral)~c_trial_gender*c_gender_total + c
 summary(rep_model)
 ```
 
+***Non-Partisans***
+
+Finally, the non-partisans.
+
 ```{r}
-inds <- test_ex %>% 
+inds <- final_prod %>% 
   filter(poli_party == "Non-Partisan")
 ```
 
@@ -522,16 +310,88 @@ ind_model <- glmer(response_neutral~c_trial_gender*c_gender_total + c_log_odds +
 summary(ind_model)
 ```
 
+### Visualizations
 
 ```{r}
-dems %>% 
-  ggplot(aes(x=c_gender_total,y=response_neutral)) + 
-  geom_point(alpha=0.1)
+base <- prod_all %>% 
+  mutate(response_gender = case_when(
+    response_gender == "male/neutral" ~ "neutral",
+    TRUE ~ response_gender
+  )) %>%
+  select(workerid,gender,response_gender) %>% 
+  rename(trial_gender = gender) %>% 
+  mutate(trial_gender = as.factor(trial_gender),
+         response_gender = as.factor(response_gender))
 ```
 
 ```{r}
-prop.table(table(final_prod$response_gender, final_prod$poli_party))
+prod_to_expand <- prod_all %>% 
+  mutate(response_gender = case_when(
+    response_gender == "male/neutral" ~ "neutral",
+    TRUE ~ response_gender
+  )) %>%
+  select(workerid,gender,response_gender,gender_total,poli_party) %>% 
+  mutate(ideology = cut_number(gender_total,n=3,labels=c("progressive","moderate","conservative"))) %>% 
+  rename(trial_gender = gender) %>% 
+  mutate(trial_gender = as.factor(trial_gender),
+         response_gender = as.factor(response_gender))
 ```
+
+```{r}
+expanded_prod <- prod_to_expand %>% 
+  mutate(id = as.factor(row_number())) %>% 
+  expand_grid(c("male","female","neutral"),base$id) %>% 
+  rename(response_old = response_gender)
+```
+
+```{r}
+colnames(expanded_prod)[8] <- "response_gender"
+```
+
+```{r}
+expanded_prod <- expanded_prod %>% 
+  group_by(id) %>% 
+  mutate(response = case_when(response_gender == response_old ~ 1,TRUE ~ 0)) %>% 
+  select(-response_old)
+```
+
+```{r}
+expanded_prod %>% 
+  group_by(response_gender,trial_gender,ideology,poli_party) %>% 
+  summarize(proportion = mean(response),
+            CI.Low = ci.low(response),
+            CI.High = ci.high(response),
+            obs = n(),
+            participants = n_distinct(workerid)) %>%
+  ungroup() %>% 
+  mutate(YMin = proportion - CI.Low,
+         YMax = proportion + CI.High) %>% 
+  ggplot(aes(x=ideology, 
+             y=proportion, 
+             fill=response_gender,
+             alpha=as.numeric(participants))) + 
+  geom_bar(stat="identity",
+           position = dodge) + 
+  geom_errorbar(aes(ymin = YMin, ymax=YMax),
+                position = dodge,
+                width=0.25) + 
+  facet_grid(poli_party~trial_gender) + 
+  scale_fill_manual(values = sec_palette, limits=c("male","female","neutral")) + 
+  scale_alpha(range=c(0.4,1)) + 
+  labs(y="Proportion of Responses",x="Gender Ideology", fill="Response Form Gender",alpha = "# of Participants") + 
+  theme(text=element_text(size=14)) + 
+  theme(axis.text.x = element_text(angle=20, vjust=.8)) + 
+  theme(legend.position = "top", legend.text = element_text(size=10), legend.title = element_text(size=10))
+```
+
+
+### Some other stuff
+
+We might have additional questions about the data, which are included here. 
+
+**Character Gender** 
+
+Looking at the effect of character gender in the vignettes, we see above that female names elicit fewer neutral responses than do the male names. We can calculate the proportions here:
 
 ```{r}
 final_prod %>% 
@@ -539,7 +399,32 @@ final_prod %>%
   summarise(mean_neutral = mean(response_neutral))
 ```
 
+**Political Party**
+
+We can do the same by political party, irrespective of gender ideology.
+
 ```{r}
-summary(final_prod)
+final_prod %>% 
+  group_by(poli_party) %>% 
+  summarise(mean_neutral = mean(response_neutral))
+```
+
+**Correlation Between Right & Left-wing News Sources**
+
+```{r}
+cor(frequency$log_right,frequency$log_left)
+```
+
+### Comments
+
+```{r}
+prod_comments <- final_prod %>% 
+  group_by(workerid) %>% 
+  mutate(comments = paste(unique(subject_information.comments))) 
+```
+
+
+```{r}
+unique(final_prod$subject_information.comments)
 ```
 
