--- a/results/exploratory/gender_ideology/merge.Rmd
+++ b/results/exploratory/gender_ideology/merge.Rmd
@@ -4,16 +4,22 @@ output: html_notebook
 ---
 ```{r}
 library(tidyverse)
+library(brms)
 ```
 
 ```{r}
 inauguration_2021 = c("#5445b1", "#749dae", "#f3c483", "#5c1a33", "#cd3341","#f7dc6a")
+bran_palette = c("#7ae7e5", "#fe5f55", "#B2A6DE", "#14342b", "#69385c")
+sec_palette = c("#3d405b","#e07a5f","#81b29a","f2cc8f")
 ```
 
 ```{r}
-maze <- read.csv("merged_all_maze.csv")
-spr <- read.csv("merged_all_spr.csv") 
-prod <- read.csv("merged_all_prod.csv")
+#maze <- read.csv("merged_all_maze.csv")
+spr <- read.csv("merged_all_spr.csv") %>%  
+  mutate(poli_party = ifelse(subject_information.party_alignment == 1 | subject_information.party_alignment == 2,'Republican',ifelse(subject_information.party_alignment == 4 | subject_information.party_alignment == 5,'Democrat','Non-Partisan')))
+
+prod <- read.csv("merged_all_prod.csv") %>% 
+  mutate(poli_party = ifelse(subject_information.party_alignment == 1 | subject_information.party_alignment == 2,'Republican',ifelse(subject_information.party_alignment == 4 | subject_information.party_alignment == 5,'Democrat','Non-Partisan')))
 ```
 
 ```{r}
@@ -22,7 +28,7 @@ gender_transcendence_cols <- c('subject_information.gender_q1','subject_informat
 gender_linked_cols <- c('subject_information.gender_q6','subject_information.gender_q7','subject_information.gender_q8','subject_information.gender_q9','subject_information.gender_q10','subject_information.gender_q11','subject_information.gender_q12','subject_information.gender_q13')
 ```
 
-```{r}
+
 maze <- maze %>%
   mutate(gender_trans = 100 - (rowMeans(maze[gender_transcendence_cols]))) %>%
   mutate(gender_link = rowMeans(maze[gender_linked_cols])) 
@@ -33,7 +39,6 @@ maze <- maze %>%
   mutate(gender_total = rowMeans(maze[gender_all])) %>%
   group_by(workerid) %>%
   summarize(gt = paste(unique(gender_total)),gender = paste(unique(subject_information.gender)),experiment="Maze") 
-```
 
 ```{r}
 spr <- spr %>%
@@ -44,8 +49,8 @@ gender_all = c('gender_trans','gender_link')
 
 spr <- spr %>%
   mutate(gender_total = rowMeans(spr[gender_all])) %>%
-  group_by(workerid) %>%
-  summarize(gt = paste(unique(gender_total)),gender = paste(unique(subject_information.gender)),experiment="Self-Paced Reading")
+  group_by(workerid,poli_party,subject_information.age) %>%
+  summarize(gt = paste(unique(gender_total)),gender = paste(unique(subject_information.gender)),experiment="Self-Paced Reading",gender_linked = paste(unique(gender_link)), gender_trans = paste(unique(gender_trans)), age = paste(unique(subject_information.age)))
 ```
 
 ```{r}
@@ -57,22 +62,23 @@ gender_all = c('gender_trans','gender_link')
 
 prod <- prod %>%
   mutate(gender_total = rowMeans(prod[gender_all])) %>%
-  group_by(workerid) %>%
-  summarize(gt = paste(unique(gender_total)),gender = paste(unique(subject_information.gender)),experiment="Production") 
+  group_by(workerid,poli_party) %>%
+  summarize(gt = paste(unique(gender_total)),gender = paste(unique(subject_information.gender)),experiment="Production",gender_linked = paste(unique(gender_link)), gender_trans = paste(unique(gender_trans)), age = paste(unique(subject_information.age)))
 ```
 
 ```{r}
-test <- rbind(maze,spr) 
-test <- rbind(test,prod)
+ideology <- rbind(prod,spr) %>% 
+  select(-c("subject_information.age"))
 ```
 
-```{r}
-cons_text <- textGrob("Conservative", gp=gpar(fontsize=10, fontface="bold"))
-lib_text <- textGrob("Liberal", gp=gpar(fontsize=10, fontface="bold"))
-```
+
+#```{r}
+#cons_text <- textGrob("Conservative", gp=gpar(fontsize=10, fontface="bold"))
+#lib_text <- textGrob("Liberal", gp=gpar(fontsize=10, fontface="bold"))
+#```
 
 ```{r}
-test %>%
+ideology %>%
   filter(gender != "") %>%
   ggplot(aes(x=gender, y=as.numeric(gt), fill=gender)) + 
   geom_boxplot() + 
@@ -84,5 +90,102 @@ test %>%
 ```
 
 ```{r}
-ggsave(height=4,width=7,path="/Users/branpap/Desktop/gender_processing/talks_and_papers/qp_paper",filename="merge_ideo_pure.png")
+ggsave(height=4,width=7,path="/Users/branpap/Desktop/gender_ideology/talks_and_papers/qp_paper",filename="merge_ideo_pure.png")
 ```
+
+
+```{r}
+ideology %>%
+  filter(poli_party != "") %>%
+  ggplot(aes(x=poli_party, y=as.numeric(gt), fill=poli_party)) + 
+  geom_boxplot() + 
+  theme_minimal() + 
+  labs(x="Participant Poliitcal Party", y="Gender Ideology Score") + 
+  theme(legend.position = 'none') + 
+  scale_fill_manual(values=bran_palette, limits=c("Democrat","Republican","Non-Partisan")) + 
+    theme(text=element_text(size=14))
+```
+
+```{r}
+ggsave(height=4,width=7,path="/Users/branpap/Desktop/gender_ideology/talks_and_papers/qp_paper",filename="merge-ideo.png")
+```
+
+
+```{r}
+ideology <- ideology %>% 
+  mutate(gender_linked = as.numeric(gender_linked)) %>% 
+  mutate(gender_trans = as.numeric(gender_trans)) %>% 
+  mutate(gt = as.numeric(gt)) %>% 
+  mutate(age = as.numeric(age)) %>% 
+  mutate(young_old = case_when(
+    age >= 40 ~ "old",
+    age < 40 ~ "young"
+  ))
+```
+
+
+```{r}
+ideology %>% 
+  filter(!is.na(poli_party)) %>% 
+  ggplot(aes(x=gender_trans,y=gender_linked,color=poli_party)) + 
+  geom_point(alpha = 0.2) + 
+  theme_minimal() + 
+  stat_ellipse(aes(color=poli_party)) + 
+  labs(x = "Gender Transcendence", y="Gender Linking", color = "Political Party") + 
+  scale_color_manual(values=bran_palette, limits=c("Democrat","Republican","Non-Partisan")) + 
+  theme(text=element_text(size=14))
+```
+
+```{r}
+ideology %>% 
+  filter(!is.na(poli_party)) %>% 
+  filter(gender != "") %>% 
+  ggplot(aes(x=gt, color=poli_party,fill=poli_party)) + 
+  geom_density(alpha = 0.3) + 
+  facet_wrap(~gender) + 
+  theme_bw() + 
+  labs(x = "Gender Total", fill = "Political Party", color = "Political Party") + 
+  scale_color_manual(values=bran_palette, limits=c("Democrat","Republican","Non-Partisan")) + 
+  scale_fill_manual(values=bran_palette, limits=c("Democrat","Republican","Non-Partisan"))
+```
+
+3 Models for Bayesian Analysis:
+
+Null Model: gt ~ 1
+Simple Model: gt ~ poli_party + (1|worker.id)
+
+```{r}
+get_prior(gt ~ poli_party + (1|workerid), data = ideology, family = gaussian())
+```
+
+
+### Age
+
+```{r}
+ideology %>% 
+  ggplot(aes(x = age, fill=gender)) + 
+  geom_bar() +
+  theme_bw() + 
+  scale_fill_manual(values = bran_palette, limits=c("Male","Female","Other","Unknown")) + 
+  facet_wrap(~experiment)
+```
+
+```{r}
+table(ideology$young_old, ideology$poli_party,ideology$experiment)
+```
+
+
+```{r}
+mean(ideology$age, na.rm = TRUE)
+```
+
+```{r}
+mean(as.numeric(prod$age), na.rm=TRUE)
+```
+
+```{r}
+mean(as.numeric(spr$age), na.rm=TRUE)
+```
+
+
+
