--- a/results/final/final_processing_model.Rmd
+++ b/results/final/final_processing_model.Rmd
@@ -513,6 +513,11 @@ final_spr %>%
 ```
 
 ```{r}
+final_spr_all <- final_spr
+```
+
+
+```{r}
 final_spr <- final_spr %>%
   filter(trial_congruency == "neutral")
 ```
@@ -977,6 +982,50 @@ df <- data.frame (first_column  = c("value_1", "value_2", ...),
 unique(final_spr$subject_information.comments)
 ```
 
+## All Data
+
+```{r}
+final_spr %>% 
+  group_by(trial_gender, lexeme) %>% 
+  summarize(MeanRT = mean(resid_rt), CI.Low = ci.low(resid_rt), CI.High = ci.high(resid_rt)) %>%
+  mutate(YMin = MeanRT - CI.Low, YMax = MeanRT + CI.High) %>%
+  ggplot(aes(x=trial_gender, y=MeanRT, color=trial_gender)) + 
+  geom_point() + 
+  geom_errorbar(aes(ymin=YMin,ymax=YMax), width=.25) + 
+  facet_wrap(~lexeme) + 
+  scale_color_manual(values = sec_palette, limits=c("male","female")) 
+```
+
+```{r}
+all_model = lmer(resid_rt~gender_total:subject_information.age + log_all*poli_party*subject_information.age + gender_total:poli_party + trial_gender + gender_total + (1 |workerid) + (1|lexeme),data=final_spr_all)
+```
+
+```{r}
+summary(all_model)
+```
 
 
+```{r}
+final_spr_all %>%
+  filter(!is.na(poli_party)) %>%
+  filter(!is.na(young_old)) %>%
+  group_by(form,poli_party,young_old,gender) %>%
+  mutate(resid_rt_mean = mean(resid_rt)) %>%
+  filter(log_all > -5) %>%
+  ggplot(aes(x=log_all,y=resid_rt_mean, color = gender)) +
+  geom_point() + 
+  geom_smooth(method="lm") +
+  facet_grid(young_old~poli_party) + 
+  labs(x="Unigram Surprisal",y="Mean Reading Time (Residual)") + 
+  theme(text=element_text(size=14))
+```
 
+## Flight Attendant
+
+```{r}
+fa <- final_spr %>% 
+  group_by(trial_gender, lexeme) %>% 
+  summarize(MeanRT = mean(resid_rt), CI.Low = ci.low(resid_rt), CI.High = ci.high(resid_rt)) %>%
+  mutate(YMin = MeanRT - CI.Low, YMax = MeanRT + CI.High) %>% 
+  filter(lexeme == "flight attendant")
+```
